--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # Core dependencies
 Flask==2.2.5
 requests==2.31.0
+gunicorn==21.2.0
 
 # Optional performance packages (commented out)
 # cchardet>=2.1.7
